force-app/main/default/objects/Work_Order__c/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <label>Booked</label>
    <type>Date</type>
</CustomField>