force-app/main/default/objects/Work_Order__c/fields/Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Required__c</fullName>
    <label>Invoice Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>