force-app/main/default/objects/Work_Order__c/fields/Required_By__c.field-meta.xml
<CustomField>
    <fullName>Required_By__c</fullName>
    <label>Required By</label>
    <type>Date</type>
</CustomField>