force-app/main/default/objects/Work_Order__c/fields/Sharing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Rule__c</fullName>
    <label>Sharing Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sharing_Setting_Rule</valueSetName>
    </valueSet>
</CustomField>