force-app/main/default/objects/Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending approval</fullName>
            </value>
            <value>
                <fullName>Pending quote</fullName>
            </value>
            <value>
                <fullName>Quote accepted</fullName>
            </value>
            <value>
                <fullName>Raised</fullName>
            </value>
            <value>
                <fullName>Raised - Chase every X days</fullName>
            </value>
            <value>
                <fullName>Landlord to complete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>