force-app/main/default/objects/Work_Order__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Works Orders</relationshipLabel>
    <relationshipName>Works_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>